Fri Oct  9 17:29:07 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (parse257): refactor.

Fri Oct  9 16:42:26 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: use frozen_string_literal: true.

	* test/net/imap/test_imap.rb: ditto.

	* test/net/imap/test_imap_response_parser.rb: ditto.

Fri Oct  9 15:52:28 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb: use frozen_string_literal: true.

	* test/net/ftp/test_buffered_socket.rb: ditto.

	* test/net/ftp/test_ftp.rb: ditto.

	* test/net/ftp/test_mlsx_entry.rb: ditto.

Fri Oct  9 14:12:35 2015  Shota Fukumori (sora_h)  <her@sorah.jp>

	* ext/openssl/lib/openssl/ssl.rb: Revert r52082 because it was
	  dropping TLS v1.1 support too. Supporting only TLS v1.2 is too
	  early, because many popular websites still don't support it.

	  For instance, Servers where aws-sdk connects to still don't support
	  TLS v1.2 and it became broken.

	  We should consider more carefully about this.

	  [Fix GH-873] [Feature #11524]

Fri Oct  9 12:52:08 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* compile.c (iseq_compile_each): Dynamic string literals (e.g.,
	  "#{x}") should not be frozen because they don't literally
	  represent strings.
	  https://twitter.com/shugomaeda/status/651937650027401216
	  https://twitter.com/yukihiro_matz/status/651942882312482817
	  https://twitter.com/yukihiro_matz/status/651980835181096960

Fri Oct  9 06:52:49 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/prepare_require.rb: skip file creation if it already
	  exist. Suggested by ko1.

Fri Oct  9 06:18:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
	* benchmark/bm_require.rb: new benchmark for require.
	* benchmark/bm_require_thread.rb: new benchmark for conflicting
	  require vs thread. like [Bug #11559]
	* prepare_require.rb: new file for preparing above tests.
	* prepare_require.rb: ditto.

Thu Oct  8 14:10:45 2015  Zachary Scott  <zzak@ruby-lang.org>
