@@ -69,4 +69,31 @@ class TestSocket_UDPSocket < Test::Unit::TestCase
   ensure
     u.close if u
   end
+
+  def test_bind_no_memory_leak
+    assert_no_memory_leak(["-rsocket"], <<-"end;", <<-"end;", rss: true)
+      s = UDPSocket.new
+      s.close
+    end;
+      100_000.times {begin s.bind("127.0.0.1", 1) rescue IOError; end}
+    end;
+  end
+
+  def test_connect_no_memory_leak
+    assert_no_memory_leak(["-rsocket"], <<-"end;", <<-"end;", rss: true)
+      s = UDPSocket.new
+      s.close
+    end;
+      100_000.times {begin s.connect("127.0.0.1", 1) rescue IOError; end}
+    end;
+  end
+
+  def test_send_no_memory_leak
+    assert_no_memory_leak(["-rsocket"], <<-"end;", <<-"end;", rss: true)
+      s = UDPSocket.new
+      s.close
+    end;
+      100_000.times {begin s.send("\0"*100, 0, "127.0.0.1", 1) rescue IOError; end}
+    end;
+  end
 end if defined?(UDPSocket)
