@@ -1,3 +1,8 @@
+Sat Oct 10 08:52:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/udpsocket.c (udp_connect, udp_bind, udp_send): fix
+	  memory leaks at closed socket.
+
 Fri Oct  9 17:29:07 2015  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/net/ftp.rb (parse257): refactor.
